# 5_carrera

./: ALMERIA.geojson.txt  CMakeLists.txt  horario_cuatri1.ods
ADMINISTRACION_SISTEMAS/: Práctica1_MarcosSomoza.docx  Práctica3_MarcosSomoza.docx  Práctica4_MarcosSomoza.docx  SomozaCorral_Marcos_ActividadClase.docx
ADMINISTRACION_SISTEMAS/Practica1/: Práctica1_MarcosSomoza.docx
ADMINISTRACION_SISTEMAS/Practica2/: Práctica2_MarcosSomoza.docx  directorios.sh  diryfich.sh  profundidad.sh  usuarioconectado.sh
ADMINISTRACION_SISTEMAS/Practica3/: Práctica3_MarcosSomoza.docx  Práctica_clase_3_MarcosSomoza.docx  ~$áctica3_MarcosSomoza.docx  ~WRL0003.tmp
BIG_DATA/: SomozaCorral_Marcos_MapReduce.docx  WordCount.java  out_part-r-00001  out_part-r-00002  out_part-r-00003  out_part-r-00004  tweets.txt
BIG_DATA/ENTREGA_FINAL/: Football_BigData.ipynb  KPIS.txt
BIG_DATA/spark_ml/: TVseries_out.txt  main.py  movies_out.txt  tempCodeRunnerFile.py
DESARROLLO_WEB/: index.html
DESARROLLO_WEB/Ej_css_clase/: ejemplo2.html
DESARROLLO_WEB/Entrega_Dado/: index.html
DESARROLLO_WEB/Grid/: ejemplo_grid.html  grid.html
DESARROLLO_WEB/JAVASCRIPT_clase1/: main.js  (+1 more)
FUNDAMENTOS/: Ej11_Matrices.java  Funciones.java  NumComplCalculator.java  ParYMulCin.java  Pyramid.java  fraccSimpl.java  tempCodeRunnerFile.java  txtreader.txt
Functuilan/: Book.cpp  Book.h  main.cpp
PEL/: CMakeLists_2Cpy.txt  P1collab_bienhecho.docx  ResumenU1U2U3.odt  ResumenU2.docx  ResumenU4.docx  dinarray.h
PEL/Ej_Librerias/: CMakeLists.txt  main.cpp
PROYECTO_INFORMATICA/: Anteproyecto.docx  acta_grupo.docx
(+78 files in other folders)
